Fix post title overflow

--- a/themes/fluid/source/css/_pages/_index/index.styl
+++ b/themes/fluid/source/css/_pages/_index/index.styl
@@ -20,17 +20,14 @@
 
 .index-header
   color var(--text-color)
-  font-size 1.5rem
+  font-size 1.2rem
   font-weight bold
   line-height 1.4
-  white-space nowrap
-  overflow hidden
-  text-overflow ellipsis
   margin-bottom .25rem
 
   .index-pin
     color var(--text-color)
-    font-size 1.5rem
+    font-size 1.2rem
     margin-right .15rem
 
 .index-btm
